test/Harper/Tests/Good/issue016_ifElseDefiniteAssignment2.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  
  if (n == 42) {
    x := n;
  }
  else if (n < 42) {
    x := 0;
  }
  else {
    x := 1;
  }

  (result :: Integer) = x + n;
  return result;
};

main :: Integer;
main = f 42;