test/Harper/Tests/Bad/issue3_noReturn.har
f n = {
  if n <= 17 {
    return 42;
  }
};

main = (f 17) + (f 18);